added getResult & getResult{id}
