# src/Controller/ApiResultsController.php
@@ -2,18 +2,28 @@
 
 namespace App\Controller;
 
+use App\Entity\Message;
+use App\Entity\Result;
 use App\Utility\Utils;
 use Doctrine\ORM\EntityManagerInterface;
-use MiW\Results\Entity\Result;
+use Sensio\Bundle\FrameworkExtraBundle\Configuration\Security;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\Request;
 use Symfony\Component\HttpFoundation\Response;
 use Symfony\Component\Routing\Annotation\Route;
 
-
-
+/**
+ * Class ApiResultsController
+ *
+ * @package App\Controller
+ *
+ * @Route(
+ *     path=ApiResultsController::RUTA_API,
+ *     name="api_results_"
+ * )
+ */
 class ApiResultsController extends AbstractController
-{/*
+{
 
 
     public const RUTA_API = '/api/v1/results';
@@ -41,7 +51,7 @@ class ApiResultsController extends AbstractController
      *     path=".{_format}/{sort?id}",
      *     defaults={ "_format": "json", "sort": "id" },
      *     requirements={
-     *         "sort": "id|email",
+     *         "sort": "id|result|user_id|time",
      *         "_format": "json|xml"
      *     },
      *     methods={ Request::METHOD_GET },
@@ -55,7 +65,7 @@ class ApiResultsController extends AbstractController
      * )
      */
 
-    /*
+
     public function cgetAction(Request $request): Response
     {
         $order = $request->get('sort');
@@ -81,14 +91,69 @@ class ApiResultsController extends AbstractController
 
         return Utils::apiResponse(
             Response::HTTP_OK,
-            ['result' => array_map(fn($u) => ['user' => $u], $result)],
+            ['result' => array_map(fn($u) => ['result' => $u], $result)],
             $format,
             [
                 self::HEADER_CACHE_CONTROL => 'must-revalidate',
                 self::HEADER_ETAG => $etag,
             ]
         );
-    }*/
+    }
+    /**
+     * GET Action
+     * Summary: Retrieves a Result resource based on a single ID.
+     * Notes: Returns the result identified by &#x60;resultId&#x60;.
+     *
+     * @param Request $request
+     * @param  int $resultId Result id
+     * @return Response
+     * @Route(
+     *     path="/{resultId}.{_format}",
+     *     defaults={ "_format": null },
+     *     requirements={
+     *          "resultId": "\d+",
+     *          "_format": "json|xml"
+     *     },
+     *     methods={ Request::METHOD_GET },
+     *     name="get"
+     * )
+     *
+     * @Security(
+     *     expression="is_granted('IS_AUTHENTICATED_FULLY')",
+     *     statusCode=401,
+     *     message="`Unauthorized`: Invalid credentials."
+     * )
+     */
+    public function getAction(Request $request, int $resultId): Response
+    {
+        /** @var Result $result */
+        $result = $this->entityManager
+            ->getRepository(Result::class)
+            ->find($resultId);
+        $format = Utils::getFormat($request);
+
+        if (null == $result) {
+            return $this->errorMessage(Response::HTTP_NOT_FOUND, null, $format);    // 404
+        }
+
+        // Caching with ETag
+        $etag = md5((string) json_encode($result));
+        if ($etags = $request->getETags()) {
+            if (in_array($etag, $etags) || in_array('*', $etags)) {
+                return new Response(null, Response::HTTP_NOT_MODIFIED); // 304
+            }
+        }
+
+        return Utils::apiResponse(
+            Response::HTTP_OK,
+            [ Result::RESULT_ATTR => $result ],
+            $format,
+            [
+                self::HEADER_CACHE_CONTROL => 'must-revalidate',
+                self::HEADER_ETAG => $etag,
+            ]
+        );
+    }
 }
 
 
